# calendar-assistant

./: .env.template  .gitignore  DEPLOYMENT_GUIDE.md  GOOGLE_OAUTH_SETUP.md  GOOGLE_VERIFICATION_CHECKLIST.md  Procfile  QUICK_START_DEPLOYMENT.md  README.md  README_MULTI_USER.md  VERIFICATION_WITHOUT_DOMAIN.md  app.py  calendar_api.py  calendar_cli.py  calendar_mcp_server.py  check_calendars.py  check_oauth_config.py  deploy.py  mcp_client.py  mcp_handlers.py  mcp_server.py  privacy_policy.md  pyproject.toml  quickstart.py  render.yaml  requirements.txt  setup_free_hosting.py  simple_mcp_client.py  simple_test.py  start_cloud.py  terms_of_service.md  test_ai_parsing.py  test_authenticated_mcp.py  test_flask_api.py  test_flask_mcp.py  test_followup_flow.py  test_frontend_debug.html  test_mcp_ai_parsing.py  test_mcp_client.py  test_mcp_direct.py  test_mcp_hang.py  (+3 more)
templates/: index.html  login.html  profile.html
