[project]
name = "calendar-assistant"
version = "1.0.0"
description = "Google Calendar Assistant with MCP Integration"
requires-python = ">=3.10"
dependencies = [
    "google-auth==2.23.4",
    "google-auth-oauthlib==1.1.0",
    "google-auth-httplib2==0.1.1",
    "google-api-python-client==2.108.0",
    "dateparser==1.2.0",
    "mcp==1.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 